[gd_scene load_steps=4 format=3 uid="uid://ccjrvr8q7vvoo"]

[ext_resource type="Script" uid="uid://d2p3df5h01fac" path="res://scripts/MainMenuManager.gd" id="1_1a2b3"]
[ext_resource type="Texture2D" uid="uid://c7ptmj5khr617" path="res://assets/images/bg.png" id="2_4c5d6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.3, 0.8, 0.3)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.9, 1, 0.7)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1a2b3")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4c5d6")
stretch_mode = 1

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitlePanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="GameTitle" type="Label" parent="UI/TitlePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -40.0
offset_right = 300.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "üéÆ Êï∞Â≠¶ÂÜíÈô©"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameSubtitle" type="Label" parent="UI/TitlePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 5.0
offset_right = 200.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "ÈÄâÊã©‰Ω†ÊÉ≥ÊåëÊàòÁöÑÂÖ≥Âç°"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="LevelGrid" type="GridContainer" parent="UI/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 1152.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="PlayerStatsLabel" type="Label" parent="UI/BottomPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -15.0
offset_right = 400.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "ü™ô ÈáëÂ∏Å: 0 | üèÜ ÂÆåÊàêÂÖ≥Âç°: 0/4"
vertical_alignment = 1

[node name="SettingsButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = -120.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "‚öôÔ∏è ËÆæÁΩÆ"

[node name="ExitButton" type="Button" parent="UI/BottomPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -20.0
offset_right = -30.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "üö™ ÈÄÄÂá∫"

[node name="FeedbackLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 300.0
offset_right = 200.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "ÂèçÈ¶à‰ø°ÊÅØ"
horizontal_alignment = 1
vertical_alignment = 1
